# ect_mnist

./: README.md  pyproject.toml  requirements.txt  setup.py
ect_mnist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: construct_complex.py  mnist_loader.py  preprocess_import.py  process_data.py  simplicial_complex.py  transform_3d.py
tests/: test_import.py
